[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plox"
version = "0.1.0"
description = "A Python interpreter for the Lox programming language"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Shreyas Kishore", email = "i@0xsk.io"},
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[project.scripts]
plox = "plox.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/plox"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

